# attoboy

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  check_untested.py
docs/: docs2html.py
docs/en/: README.md
docs/en/api/: README.md
docs/en/api/ai/: README.md
docs/en/api/arguments/: README.md
docs/en/api/buffer/: README.md
docs/en/api/console/: README.md
docs/en/api/conversation/: README.md
docs/en/api/datetime/: README.md
docs/en/api/embedding/: README.md
docs/en/api/file/: README.md
docs/en/api/list/: README.md
docs/en/api/map/: README.md
docs/en/api/math/: README.md
docs/en/api/mutex/: README.md
docs/en/api/path/: README.md
docs/en/api/registry/: README.md
docs/en/api/set/: README.md
docs/en/api/string/: README.md
docs/en/api/subprocess/: README.md
docs/en/api/system/: README.md
docs/en/api/thread/: README.md
docs/en/api/webrequest/: README.md
docs/en/api/webresponse/: README.md
docs/en/getting-started/: README.md
docs/en/tutorial/: README.md
docs/html/: index.html
docs/ru/: README.md
docs/ru/api/: README.md
docs/ru/getting-started/: README.md
docs/ru/tutorial/: README.md
docs/zh/: README.md
docs/zh/api/: README.md
docs/zh/getting-started/: README.md
docs/zh/tutorial/: README.md
examples/: example_compare_files.cpp  example_console.cpp  example_containers.cpp  example_crypt.cpp  example_crypto.cpp  example_csv_to_json.cpp  example_directx.cpp  example_gui_chat.cpp  example_hello.cpp  example_kitchen_sink.cpp  example_minesweeper.cpp  example_notes.cpp  example_simple_chat.cpp  example_summarize.cpp  example_timer.cpp  example_web_get.cpp  example_web_server.cpp
include/attoboy/: attoboy.h
libattoboy/: CMakeLists.txt
libattoboy/examples/: example_console.cpp  example_containers.cpp  example_crypto.cpp  example_hello.cpp  example_mem_random.cpp  example_string.cpp
libattoboy/ignoretests/: test_buffer_crypto_simple.cpp  test_buffer_minimal.cpp  test_buffer_simple.cpp  test_datetime.cpp  test_env.cpp  test_file_pipe.cpp  test_file_server_minimal.cpp  test_log.cpp  test_map.cpp  test_map_first10.cpp  test_map_minimal.cpp  test_math.cpp  test_mem.cpp  test_mutex.cpp  test_nested_json_output.cpp  test_nested_minimal.cpp  test_registry_minimal.cpp  test_registry_simple.cpp  test_util.cpp  test_variadic_constructors.cpp
libattoboy/include/attoboy/: attoboy.h
libattoboy/src/: atto00_intrinsics_msvc.cpp  atto_internal_common.h  attoai_ask.cpp  attoai_conversation.cpp  attoai_core.cpp  attoai_embedding.cpp  attoarguments_add.cpp  attoarguments_core.cpp  attoarguments_internal.h  attoarguments_parse.cpp  attoarguments_query.cpp  attobuffer_compress.cpp  attobuffer_core.cpp  attobuffer_crypto.cpp  attobuffer_internal.h  attobuffer_modify.cpp  attobuffer_mutate.cpp  attobuffer_utility.cpp  attoconsole_consoleinput.cpp  attoconsole_input.cpp  attoconsole_internal.h  attoconsole_menu.cpp  attoconsole_output.cpp  attodatetime_convert.cpp  attodatetime_core.cpp  attodatetime_internal.h  attodatetime_ops.cpp  attofile_accept.cpp  attofile_comparison.cpp  attofile_core.cpp  attofile_internal.h  attofile_read.cpp  attofile_write.cpp  attolist_access.cpp  attolist_append.cpp  attolist_core.cpp  attolist_csv.cpp  attolist_internal.h  attolist_json.cpp  attolist_mapset.cpp  (+70 more)
libattoboy/tests/: README.md  aggregate_coverage.py  python_test_arguments_runner.cpp  python_test_path_runner.cpp  test_ai_comprehensive.cpp  test_ai_debug.cpp  test_ai_live.cpp  test_ai_minimal.cpp  test_ai_mock.cpp  test_ai_mock_debug.cpp  test_ai_simple.cpp  test_ai_verbose.cpp  test_arguments.py  test_arguments_comprehensive.cpp  test_arguments_features.cpp  test_arguments_minimal.cpp  test_arguments_simple.cpp  test_buffer.cpp  test_buffer_c_ptr_simple.cpp  test_buffer_compact_simple.cpp  test_buffer_comprehensive.cpp  test_buffer_compress.cpp  test_buffer_compress_simple.cpp  test_buffer_crypto_simple.cpp  test_buffer_minimal.cpp  test_buffer_simple.cpp  test_conversation_only.cpp  test_datetime.cpp  test_datetime_comprehensive.cpp  test_embedding_similarity.cpp  test_env.cpp  test_exit.cpp  test_file_comprehensive.cpp  test_file_server_socket.cpp  test_file_server_socket_simple.cpp  test_file_simple.cpp  test_file_socket.cpp  test_file_socket.py  test_file_socket_complete.cpp  test_file_socket_complete.py  (+59 more)
scripts/: attobuild.bat
src/: atto00_intrinsics_gcc.cpp  atto00_intrinsics_msvc.cpp  atto_internal_common.h  attoai_ask.cpp  attoai_conversation.cpp  attoai_core.cpp  attoai_embedding.cpp  attoai_internal.h  attoarguments_parse.cpp  attoarguments_query.cpp  attobuffer_crypto.cpp  attobuffer_internal.h  attobuffer_modify.cpp  attobuffer_trim.cpp  attobuffer_utility.cpp  attoconsole_consoleinput.cpp  attoconsole_core.cpp  attoconsole_cursor.cpp  attoconsole_format.cpp  attoconsole_hotkey.cpp  attoconsole_input.cpp  attoconsole_menu.cpp  attoconsole_progress.cpp  attoconsole_readkey.cpp  attoconsole_utils.cpp  attodatetime_ops.cpp  attofile_core.cpp  attofile_position.cpp  attofile_write.cpp  attolist_access.cpp  attolist_append.cpp  attolist_csv.cpp  attolist_internal.h  attolist_modify.cpp  attolist_query.cpp  attolist_sort.cpp  attolist_transform.cpp  attomap_access.cpp  attomap_internal.h  attomap_json.cpp  (+39 more)
tests/: README.md  aggregate_coverage.py  mock_server.py  python_test_runner.py  run_tests_with_mock.py  test_ai_comprehensive.cpp  test_ai_debug.cpp  test_ai_minimal.cpp  test_ai_mock.cpp  test_ai_mock_debug.cpp  test_ai_simple.cpp  test_ai_verbose.cpp  test_arguments_comprehensive.cpp  test_buffer_comprehensive.cpp  test_console_comprehensive.cpp  test_conversation_only.cpp  test_embedding_similarity.cpp  test_exit.cpp  test_framework.h  test_functions.h  test_list_comprehensive.cpp  test_math_comprehensive.cpp  test_path_comprehensive.cpp  test_registry_comprehensive.cpp  test_set_comprehensive.cpp  test_string_comprehensive.cpp  test_test_framework.cpp  test_thread_mutex_comprehensive.cpp  test_webrequest.cpp.old  test_webrequest_basic.cpp  test_webrequest_comprehensive.cpp  test_webrequest_mock.cpp
(+42 files in other folders)
