cmake_minimum_required(VERSION 3.15)
project(attoboy-workspace VERSION 0.0.1 LANGUAGES CXX)

# ------------------------------------------------------------------------------
# Build the libattoboy subproject
# ------------------------------------------------------------------------------
add_subdirectory(libattoboy)
